syntax = "proto3";

package order;

option go_package = "./pb";

service OrderService {
  rpc CreateCart (CreateCartRequest) returns (CartResponse);
}

message CreateCartRequest {
  string userID = 1;
}

message CartResponse {
  string id = 1;
  string userID = 2;
  string createdAt = 3;
  string updatedAt = 4;
}